Improvements to Sample App

--- a/packages/server/src/views/index.pug
+++ b/packages/server/src/views/index.pug
@@ -4,7 +4,7 @@ html(lang='en')
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
     title Procore
-    meta(name='accessToken', content=accessToken)
+    meta(name='tokenInfo', content=tokenInfo)
   body
     noscript You need to enable JavaScript to run this app.
     #root
